# template-opengl-cpp

./: CMakeLists.txt  README.md
glad/include/glad/: glad.h
glad/src/: glad.c
